[package]
name = "bip300_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bitcoin = { version = "0.31.0", features = ["serde"] }
byteorder = "1.5.0"
hex = "0.4.3"
miette = { version = "5.10.0", features = ["fancy"] }
prost = "0.12.3"
redb = "1.5.0"
serde = { version = "1.0.195", features = ["derive"] }
tempfile = "3.9.0"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.10.2"
ureq-jsonrpc = { git = "https://github.com/nchashch/ureq-jsonrpc" }
bip300_messages = { git = "https://github.com/LayerTwo-Labs/bip300_messages" }
sha2 = "0.10.8"

[build-dependencies]
tonic-build = "0.10.2"
